# expat

./: .clang-format  CMakeLists.txt  CMakePresets.json  helper.cmake  readme.md
include/expat/: literals.hpp  needs.hpp  panic.hpp  process.hpp  system_error.hpp  wrapper_types.hpp  wrappers.hpp
src/: dependencies.cpp  main.cpp  mini_shell.cpp
test/: test_pipe.cpp  test_run_process_1.cpp
